data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_481.wast
;; 2. **Test Br with Stack Unwinding**: A loop that relies on `br` to jump back to the start of the loop, with complex stack manipulations between jumps. The test checks that the stack is properly unwound and corrected during each iteration to avoid infinite looping.

(assert_invalid
  (module
    (func
      (param i32)
      (result i32)
      (local i32)
      (loop (result i32)
        (local.get 0)
        (i32.const 1)
        (i32.add)
        (local.set 0)
        (local.get 0)
        (i32.const 10)
        (i32.lt_s)
        (br_if 0)
        (local.get 0)
      )
    )
  )
  "type mismatch"
)